Organize the BUGS section of the man page into sections,
and add links to four more qemu 1.x regressions.

Add Kuya support, based on patch from Julio Merino.

New command line option "--version".

Support booting i386 and amd64 from boot-com.iso instead
of the boot floppies, attaching a second virtual CD-ROM drive
for the install sets.  Enable with "--boot-from cdrom".

Fix the Anita 1.2 backwards compatibility Release class.

- 1.29 released -

Fix "xm" Xen interface support broken in 1.28.

- 1.28 released -

The "xl" Xen interface can now be selected with "--vmm xl".

Increase the default memory size for amd64 to 128M.

Improve progress messages when creating the disk image.

When execing /bin/sh, wait for its prompt before sending
it a command.

- 1.27 released -

Run shell commands on the target system using /bin/sh rather
than root's login shell, as sysinst no longer sets the login
shell to /bin/sh by default.

- 1.26 released -

Track the sysinst changes of 2012-04-06 introducing the new
post-install configuration menu.

Print a message before creating the disk image, as it can take
a long time and make it appear that anita has hung.

- 1.25 released -

Before running a shell command on the system under test, change the
shell prompt to a more distinctive one to reduce the risk of command
output being mistaken for a prompt.

Support installing SPARC ISOs having a non-numeric suffix following
the version number, such as NetBSD-6.0_BETA-sparc.iso.

Added experimental support for using Xen instead of qemu as the
virtual machine monitor.  This is enabled by specifying "--vmm xen" on
the anita command line while running as root in a Xen dom0.

New command line option "--persist".

- 1.24 released -

Support the new distribution ISO naming scheme, e.g.,
NetBSD-5.99.60-sparc.iso instead of sparccd.iso.

Support installation of the X11 and source sets.

On unknown platforms, use mkisofs instead of genisoimage.

On sparc, the scratch disk is sd1c, not wd1d.
